# xiaoshuo

./: .gitignore  .rivet.md  AGENTS.md  build.bat  install-py312.bat  pyproject.toml  启动.bat
.github/workflows/: build.yml
.rivet/: .templates-init-sentinel  meridian.db  meridian.db-shm  meridian.db-wal  presence.json  recovery-journal.jsonl
.rivet/backups/1784282651350/: pyproject.toml
.rivet/backups/1784282806007/: pyproject.toml
.rivet/backups/1784285029344/src/templates/: index.html
.rivet/backups/1784285050579/src/static/: style.css
.rivet/backups/1784285521343/src/: app.py
.rivet/knowledge/: advisory-efficacy.jsonl
.rivet/tmp/: theta-cache.json
docs/superpowers/plans/: 2025-06-28-webnovel-extraction-pipeline.md  2026-07-17-novel-extractor.md
docs/superpowers/specs/: 2025-06-28-webnovel-extraction-pipeline-design.md  2026-07-17-novel-extractor-design.md
src/: aggregator.py  analyzer.py  app.py  chunker.py  config.py  desktop.py  engine.py  lexicon.py  llm.py  meso.py  parser.py  skeleton.py
src/static/: app.js  style.css
src/templates/: index.html
