[project]
name = "novel-extractor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1",
    "chromadb>=0.5",
    "openai>=1.55,<2.0",
    "tiktoken>=0.8",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
build = ["pyinstaller>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
